--- a/package.json
+++ b/package.json
@@ -4,36 +4,41 @@
   "version": "0.0.0",
   "author": "Gordon Burgett <gordon@gordonburgett.net>",
   "license": "MIT",
-
-  "keywords": ["hubot","hubot-scripts"],
-
+  "keywords": [
+    "hubot",
+    "hubot-scripts"
+  ],
   "repository": {
     "type": "git",
     "url": "git://github.com/hubot-scripts/hubot-better-help.git"
   },
-
   "bugs": {
     "url": "https://github.com/hubot-scripts/hubot-better-help/issues"
   },
-
   "dependencies": {
-    "coffee-script": "~1.6"
+    "coffee-script": "~1.6",
+    "stopwords": "^0.0.5"
   },
-
   "devDependencies": {
-    "mocha": "*",
-    "chai": "*",
-    "sinon-chai": "*",
-    "sinon": "*",
-    "grunt-mocha-test": "~0.7.0",
-    "grunt-release": "~0.6.0",
-    "matchdep": "~0.1.2",
-    "grunt-contrib-watch": "~0.5.3"
+    "@types/chai": "^3.5.2",
+    "@types/mocha": "^2.2.41",
+    "@types/node": "^7.0.22",
+    "@types/sinon": "^2.2.2",
+    "chai": "^4.0.0",
+    "del": "^2.2.2",
+    "gulp": "^3.9.1",
+    "gulp-rename": "^1.2.2",
+    "gulp-typescript": "^3.1.7",
+    "hubot-meme": "^1.3.2",
+    "hubot-test-helper": "^1.5.1",
+    "mocha": "^3.4.1",
+    "sinon": "^2.2.0",
+    "ts-node": "^3.0.4",
+    "tslint": "^5.3.2",
+    "typescript": "^2.3.3"
   },
-
   "main": "index.coffee",
-
   "scripts": {
-    "test": "grunt test"
+    "test": "mocha --compilers coffee:coffee-script,ts:ts-node/register --recursive 'src/**/*.test.ts'"
   }
 }
