--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 language: node_js
 node_js:
-  - "0.11"
+  - "node"
+  - "7"
   - "0.10"
-notifications:
-  email: false
+
+script:
+  - yarn run lint
+  - yarn run test
